# TMDB_CLI_Tool

./: README.md  pyproject.toml
tmdb_cli_tool/: __main__.py  model.py  tmdb.py
